# specwriter

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
briefing/: 01-why-now.md  02-maturity-model.md  03-workflow-usage.md  04-live-demo.md  05-failure-patterns.md  07-facilitator-notes.md  preview.html  to-pdf.mjs
core/: Cargo.toml
core/src/: detect.rs  main.rs  parser.rs  scanner.rs  types.rs
npm/core-darwin-arm64/: package.json
npm/core-darwin-x64/: package.json
npm/core-linux-x64/: index.js  package.json
npm/core-win32-x64/: index.js  package.json
src/: i18n.ts  index.ts
src/adapters/: registry.ts  types.ts
src/adapters/angular/: index.ts
src/adapters/generic/: index.ts
src/adapters/nextjs/: index.ts  routes.ts
src/adapters/nuxt/: index.ts
src/adapters/react/: index.ts
src/adapters/svelte/: index.ts
src/adapters/vue/: index.ts
src/analyzers/: api-patterns.ts  directory-roles.ts  env-resolver.ts  mcp-recommendations.ts  page-templates.ts  service-inference.ts  testing-patterns.ts  tooling.ts  ui-patterns.ts  usage-patterns.ts
src/cli/: index.ts
src/core/: analyzer.ts  rust-bridge.ts
src/detect/: config-files.ts  file-patterns.ts  index.ts  package-json.ts
src/features/: figma.ts  manager.ts  wireframe.ts
src/generators/: ai-integration.ts  component-specs.ts  index.ts  page-structure.ts  project-rules.ts  project-spec.ts
src/mcp/: server.ts
src/parsers/: typescript.ts  vue-sfc.ts
src/types/: component.ts  page.ts  project.ts  spec.ts
src/wireframe/: ascii-renderer.ts  layout-detector.ts
(+5 files in other folders)
