[package]
name = "specwriter-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "specwriter-core"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
# Vue files parsed with custom regex parser (no tree-sitter-vue on crates.io)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
